--- a/README.Rmd
+++ b/README.Rmd
@@ -1,13 +1,14 @@
 ---
+title: optimLanduse
 output: 
-  github_document
+  github_document:
+    toc: true
+    number_sections: true
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
-
-## optimLanduse
 
 [![](https://www.r-pkg.org/badges/version/optimLanduse)](https://cran.r-project.org/package=optimLanduse)
 [![](http://cranlogs.r-pkg.org/badges/grand-total/optimLanduse?color=green)](https://cran.r-project.org/package=optimLanduse)
@@ -15,37 +16,17 @@ knitr::opts_chunk$set(echo = TRUE)
 [![](https://img.shields.io/github/last-commit/Forest-Economics-Goettingen/optimLanduse.svg)](https://github.com/Forest-Economics-Goettingen/optimLanduse/commits/master)
 [![](https://img.shields.io/github/languages/code-size/Forest-Economics-Goettingen/optimLanduse.svg)](https://github.com/Forest-Economics-Goettingen/optimLanduse)
 
-<h3><a name="menu"></a></h3>
+self made:
+[Introduction]
+[Literature]
 
-<ul>
-
-<li><a href="#1. Einleitung">1. Introduction</a></li>
-
-[Introduction 2]
-
-<li><a href="#3. Input und Output">2. Detailed Description of the Functions' In- and Outputs</a></li>
-
-<li><a href="#5. Beispielhafte Anwendung">3. Example Application</a></li>
-
-<li><a href="#6. Erweiterte Anwendung">4. Batch application and sensitivity analysis</a></li>
-
-<li><a href="#7. Suggested">5. Suggested Citation</a></li>
-
-<li><a href="#8. Literatur">6. Literature</a></li>
-
-[Literature 2]
-
-</ul>
-
-<h3><a name="1. Einleitung">1. Introduction</a></h3>
-
-# Introduction 2
+# Introduction
 
 When managing ecosystems, the question arises as to how to simultaneously combat biodiversity loss and maintain ecosystem functioning while improving human welfare. Designing multifunctional landscapes means deciding upon the composition and configuration of land-cover types, given that landscape patterns drive the landscape\`s ecological value and its ability to satisfy societal demands. Land-cover allocation models, particularly optimization approaches, have proven helpful in revealing trade-offs between multiple objectives and services provided by different land-cover compositions.
 
 The R package **optimLanduse** provides functions for easy and systematic applications of the robust multiobjective land-cover composition optimization approach of Knoke et al. (2016). It includes tools to determine the land-cover composition that best balances the multiple functions and services a landscape can provide, as well as tools for a deeper understanding and visualization of the contributions of the distinct indicators. The method has been developed and applied previously in a couple of studies, with some examples to be found in the <a href="#8. Literatur">literature</a> section. The methodological background of the approach can e.g., be found in Knoke et al. (2016) and Husmann et al. (n.d.). We here refer to the nomenclature of Husmann et al. (n.d.). The package opens the approach of Knoke et al. (2016) to the community of landscape planners and provides opportunities for systematic or batch applications. To further enhance this, we have designed a shiny dashboard for the package to get a brief idea of its functionalities and to faciliate the usage of the package, see <http://134.76.17.50/optimlanduse_shiny/>. The current package version optimizes land-cover compositions, but aspects of configuration may be added in the future.
 
-<h3><a name="3. Input und Output">2. Detailed Description of the Functions’ In- and Outputs</a></h3>
+# Detailed Description of the Functions’ In- and Outputs
 
 This chapter provides a brief overview of the package functions (Fig. 1). For detailed information on methodological background, functions, and workflow please also refer to Husmann et al. (n.d.). We further refer the reader to the respective help pages of the package for more information.
 
@@ -64,7 +45,7 @@ install.packages("optimLanduse")
 
 *Fig. 1: Overview of the functions of the* ***optimLanduse*** *package. Green diamonds: input and output data; blue rectangles: functions; gray parallelograms: optional function settings.*
 
-#### Initialization and Input
+## Initialization and Input
 
 The *initScenario()* function combines the user settings with the data into an *optimLanduse*-object ready for solving. The following input data are required:
 
@@ -84,7 +65,7 @@ The *initScenario()* function combines the user settings with the data into an *
 
 -   *fixDistance*: Optional numeric value that defines distinct uncertainty levels for the calculation of the uncertainty space and the averaged distances of a certain land-cover composition (see Equation 9 in Husmann et al. (n. d.)). Passing NA disables fixDistance. The uncertainty space is then defined by the uValue.
 
-#### Solver and List with results
+## Solver and List with results
 
 The *solveScenario()* function takes the initialized *optimLanduse*-object and only a few optional solver-specific arguments.
 
@@ -105,17 +86,17 @@ This is followed by a summary of the results of the optimization:
 -   $\beta$: The maximum distance of the worst performing scenario (Equation 1 in Husmann et al. (n.d.)).
 -   *landUse*: The resulting land-cover composition after the optimization.
 
-#### Post-Processing
+## Post-Processing
 
 -   *calcPerformance()*: Attaches the portfolio performances of all indicators and scenarios as a data frame to the soved optimLanduse object. The data can be used for straightforward visualization of the performance (e.g. Fig. 3). The performance is defined as the distance to the maximum achievable level for each indicator and uncertainty scenario.
 
-<h3><a name="5. Beispielhafte Anwendung">3. Example Application</a></h3>
+# Example Application
 
 We here present the basic workflow on a literature example. The aim of this chapter is to introduce the functionality of the packages' functions and to explain the relevant in- and output on the example of a use-case in Eastern Panama. The data of this study can be accessed in *Appendix A* of Gosling et al. (2020) and is also firmly integrated into the **optimLanduse** package. It can be accessed via *exampleData("exampleGosling.xlsx")*. The data integrated in the package already comes in the required *optimLanduse* format, so that it can be used without any data processing.
 
 Enriching agricultural farms with agroforestry has been promoted as a means to enhance ecosystem functioning in farms in Panama, while maintaining important economic functions. Gosling et al. (2020) therefore used the here presented optimization model to understand smallholder farmers' perceptions and values of agroforestry systems. They identified 10 relevant indicators for a predefined set of land-cover alternatives, which represent the farmers' goals (such as long and short-term income or labor demand, as well as carbon and water regulation). A survey with local farmers provided the empirical basis in the form of the farmer's expectations on the indicator performance of each land-cover (arithmetic mean) and its uncertainties (using the standard error of the mean across the survey's respondents). Descriptions of the land-cover alternatives and indicators can be found in Tables 1 and 2 in Gosling et al. (2020).
 
-### Loading Required Packages and Importing the Data
+**Loading Required Packages and Importing the Data**
 
 ```{r, message=FALSE, warning=FALSE}
 
@@ -133,7 +114,7 @@ dat <- read_excel(path)
 
 *dat* is in the required format. Refer to the help of the *initScenario()* function or to the <a href="#3. Input und Output">detailed description of the functions' in- and outputs</a> chapter for more details.
 
-### Initializing an *optimLanduse* Object
+**Initializing an *optimLanduse* Object**
 
 ```{r, message=FALSE, warning=FALSE, fig.height = 3, fig.width = 4}
 # Initializing an optimLanduse-object
@@ -148,7 +129,7 @@ init <- initScenario(coefTable = dat,
 
 In line with Gosling et al. (2020), we chose the expected value of the indicators as optimistic outcomes *(optimisticRule = "expectation")* and the same uncertainty level for the calculation of the averaged distances and the uncertainty space (*fixDistance = NA*, see Equations 4 and 9 in Husmann et al. (n.d.) for more details).
 
-### Solving the Initialized *optimLanduse* Object
+**Solving the Initialized *optimLanduse* Object**
 
 ```{r, message=FALSE, warning=FALSE, fig.height = 3, fig.width = 4, fig.align='center'}
 # Solve the initialized optimLanduse object using the solveScenario() function                     
@@ -176,7 +157,7 @@ result$landUse %>% gather(key = landCoverOption,
 
 The resulting optimized farm composition (Fig. 2) corresponds to Fig. 3 ($f_u=2$) in Gosling et al. (2020). It can be seen that the farm composition that best contributes to all 10 indicators (i.e. the multifunctional portfolio) is dominated by silvopasture and forest. According to Gosling et al. (2020), this reveals the potential of agroforestry to serve as a compromised solution to fulfill multiple ecological and economic functions. Recently, however, the observed average farm portfolio of the surveyed farms was mainly composed of pasture and cropland with only a small share of forest (14%). This reveals that not all of the selected objectives currently drive farmer's land-cover decisions. The optimization approach can then be used to dive deeper into the effect of different goals on the resulting optimized land-cover composition and the effects of uncertainty.
 
-### Calculating the Portfolio Performances of the Optimized *optimLanduse* Object
+**Calculating the Portfolio Performances of the Optimized *optimLanduse* Object**
 
 ```{r, results='hide', message=FALSE, warning=FALSE, fig.height = 5, fig.width = 10, fig.align='center'}
 # Performance calculations
@@ -233,7 +214,7 @@ knitr::kable(performanceExample, row.names = F)
 knitr::kable(performanceExample, row.names = F)
 ```
 
-### Comparison of the performance of the currently observed land-cover composition to the optimized composition
+**Comparison of the performance of the currently observed land-cover composition to the optimized composition**
 
 ```{r, message=FALSE, warning=FALSE, results='hide'}
 result_current <- solveScenario(x = init,
@@ -281,12 +262,11 @@ Setting the arguments for the lower and upper bounds exactly to the currently ob
 
 Amounting to 0.387, the guaranteed performance of the multifunctional portfolio is considerably higher than the guaranteed performance of the current land-cover composition (0.089). Each of the indicators considered is thus fulfilled by at least 38.7% compared to its individual achievable level in the optimized portfolio. The comparison of the performances of the currently observed land-cover composition (Fig. 4) with the performances of the multifunctional portfolio (Fig. 3) reveals that, for example, the performance of the financial stability is significantly higher in the optimized portfolio. The performance of meeting households needs and liquidity, for example, decreases significantly. The price to be paid for the best-possible compromise is thus a fundamentally lower performance of both indicators that approximate the immediate economic success. The generally desirable multifunctional portfolio therefore does not promise immediate economic success for the farmers.
 
-<h3><a name="6. Erweiterte Anwendung">4. Batch application and sensitivity analysis</a></h3>
+
+# Batch application and sensitivity analysis
 
 
-
-
-### Batch Analysis: Solving Multiple Uncertainty Values
+## Solving for Multiple Uncertainty Values
 
 ```{r, message=FALSE, warning=FALSE, fig.height = 5, fig.width = 7}
 applyDf <- data.frame(u = seq(0, 3, .5))
@@ -324,7 +304,7 @@ Solving the portfolio (Fig. 5) under increasing assumptions for the uncertainty 
 
 Alley cropping does not appear in any portfolio at any uncertainty level. It does not, on average, contribute best to any indicator. At least one other land-cover type contributes better each indicator. It also contributes the worst (highest) to management complexity. This overall negative contribution does not change with increasing uncertainty levels. By trend, higher uncertainty levels lead to more diverse portfolios. The uncertainty spaces of all indicators increase with increasing uncertainty levels. These broadened individual uncertainty spaces then lead to a broader state space with a higher number of possible candidates for lowest-performing scenarios (i.e., scenarios that can under lower uncertainty not become part of the solution, as their distances could not be the maximum distance of any land-cover composition). Plantation, for example, is not part of the portfolio till an uncertainty level of 1.5. It only provides the best to the long-term income while providing the worst by far to the general preferences. It also generally only provides minor contributions to the indicators. Under an uncertainty level of 1, for example, plantation provides the worst to the general preferences even if all other indicators are considered as worst-possible contributions. This ranking changes after uncertainty levels above 1.5. At uncertainty level of 1.5, the worst-possible contribution of forests to the general preferences ($1 - 0.99 * 2 = -0.98$, see Table 1 in Husmann et al. (n.d.)) is then the worst possible contributing indicator among all land-cover types.
 
-### Selecting Specific Indicator Bundles - Investigating the Indicator's Sensitivities
+## Selecting Specific Indicator Bundles - Investigating the Indicator's Sensitivities
 
 The sensitivity of the land-cover compositions towards indicators or groups of indicators can be analyzed by either excluding or adding indicators of interest and interpreting the differences in the results of the distinct optimization. To do so, individual and independent optimizations are carried out in- and excluding different (sets of) indicators. The set of indicators considered is representative of the stakeholders' preferences and perceptions. Comparison of optimal land-cover compositions under differing indicator combinations may help to understand how stakeholders' preferences design the land-cover compositions. The following code exemplifies optimizations for three subsets of indicators presented in Gosling et al. (2020). The shiny app of *optimLanduse* (<http://134.76.17.50/optimlanduse_shiny/>) provides straightforward functionality to define sets of indicators with a single click. Further explanation and instructions are given in the app.
 
@@ -357,6 +337,8 @@ result_socioeconomic$landUse %>% gather(key = landCoverOption,
 ```
 
 *Fig. 6: Composition of the optimized farm (based on data of Gosling et al. (2020)), including only socio-economic indicators. Each land-cover option is shown in an allocated share (%).*
+
+### Socio-economic
 
 The first example considers socio-economic indicators only (Fig. 6; see also Fig. 5 of Gosling et al. (2020)). The result corresponds to the above shown multifunctional portfolio (Fig. 2). This is expected, as all indicators relevant to the solution of the multifunctional portfolio (financial stability, investment costs, and meeting household needs) are also captured in the socio-economic bundle.
 
@@ -428,6 +410,8 @@ result_ecologic$landUse %>% gather(key = landCoverOption, value = landCoverShare
 
 *Fig. 8: Composition of the optimized farm (based on data of Gosling et al. (2020)), including only ecological indicators. Each land-cover option is shown in an allocated share (%).*
 
+### Ecological
+
 As the second example, the ecological indicator group leads to a land-cover portfolio comprising of only forests (Fig. 8; corresponds to Fig. 5 of Gosling et al. (2020)). It can be concluded that all contributions of all other land-cover alternatives in all scenarios (even the optimistic ones) to the ecological indicators are lower than those of forests. The land-cover composition of the ecologic bundle differs fundamentally from the currently observed portfolio. The ecological indicators are therefore apparently not sufficient to approximate the farmers' current perceptions.
 
 ### Immediate Economic Success
@@ -464,11 +448,11 @@ result_short$landUse %>% gather(key = landCoverOption, value = landCoverShare, 1
 
 The third example is composed of a bundle of indicators that prospectively reflect the farmer's needs and perceptions (Fig. 9). Corresponding to Fig. 5 of Gosling et al. (2020), this scenario only consists of indicators that approximate immediate economic success. Indeed, the land-cover composition of this portfolio best reflects the portfolio observed in Eastern Panama. Hence, these indicators best reflect the farmers' goals and perceptions in Eastern Panama. The difference between this portfolio and the desired multifunctional portfolio (Fig. 2) highlights the requirements a land-cover alternative must fulfill to meet the farmers' requirements and goals. The silvopasture, as defined in Gosling et al. (2020), may not serve the requirements of the farmers sufficiently. Since farmers rate liquidity and meeting household needs higher than long-term profit and economic stability, pasture outperforms silvopasture in the immediate return scenario. Policies or development plans may consider these indicators key elements when promoting landscape development toward multifunctional landscapes.
 
-### Pay-Off Matrix
+## Pay-Off Matrix
 
 A pay-off matrix provides information about the influence of single indicators on the sensitivity of the results (see e.g. Aldea et al., 2014, Table 1; Ezquerro et al., 2019, Table 1; Knoke et al., 2020, Supporting Information Table S6). The matrix shows the performances of all indicators when only one indicator is considered in the land-cover optimization and therewith reveals to which degree the indicators are antagonistic. In contrast to Aldea et al. (2014), Ezquerro et al. (2019) and, Knoke et al. (2020), we here calculate the relative degree of fulfillment of the indicators and not their absolute values. The relative degree of fulfillment can easily be taken from the optimLanduse object, so that no further calculation are required to obtain a pay-off matrix.
 
-The following code calculates a pay-off matrix using the *apply* function. For this, *payOffFun* encloses all calculation steps. *payOffFun* expects the name of the indicator that is to be considered in the optimization *x* and the data in the optimLanduse format *dat*. In *payOffFun*, firstly (1), the land-cover composition is optimized for the one indicator defined in *x* only. The resulting land-cover configuration is then (2) passed as lower and bounds to the land-cover optimization that considers all indicators. Accordingly, the solution of the second optimization (2) is limited to the result of the optimization taking into account the indicator *x* only. The second optimization aims to calculate the performances of all indicators when optimized for the indicator *x* only. From the set of the calculated performances for each indicator, only the minimum performance is taken (3) and saved into the pay-off matrix. To sum up, each row of the pay-off matrix contains the minimum performances of all indicators when the land-cover configuration is optimized for one indicator only. The indicators considered for optimization are located on the main diagonal of the resulting pay-off matrix.
+The following code calculates a pay-off matrix using the *apply* function. For this, *payOffFun* encloses all calculation steps. *payOffFun* expects the name of the indicator that is to be considered in the optimization *x* and the data in the optimLanduse format *dat*. In *payOffFun*, firstly (1), the land-cover composition is optimized considering the one indicator defined in *x* only. The resulting land-cover configuration is then (2) passed as lower and bounds to the land-cover optimization that considers all indicators. Accordingly, the solution of the second optimization (2) is limited to the result of the optimization taking into account the indicator *x* only. The second optimization aims to calculate the performances of all indicators when optimized considering the indicator *x* only. From the set of the calculated performances for each indicator, only the minimum performance is taken (3) and saved into the pay-off matrix. To sum up, each row of the pay-off matrix contains the minimum performances of all indicators when the land-cover configuration is optimized for one indicator only. The indicators considered for optimization are located on the main diagonal of the resulting pay-off matrix.
 
 ```{r, message=FALSE, warning=FALSE, results='hide'}
 
@@ -537,9 +521,9 @@ knitr::kable(payOff_Matrix, row.names = F)
 
 It can be followed from the pay-off matrix (Table 3), that e.g., the general preferences are fully fulfilled when optimized considering the financial stability only (row 1) and vice-versa (row 2). Also, the long-term income and the liquidity are fulfilled to high degrees. In contrast, farmers' requirements regarding investment costs are fulfilled poorly (0.074).
 
-When optimized for the water supply protection only (row 10), the indicators most relevant for the farmers (meeting household needs and Liquidity, Fig. 9) perform very poorly (0.0). This shows that from a societal perspective, the desirable water supply function is clearly antagonistic to the farmer's requirements.
+When optimized considering the water supply protection only (row 10), the indicators most relevant for the farmers (meeting household needs and Liquidity, Fig. 9) perform very poorly (0.0). This shows that the water supply function is clearly antagonistic to the farmer's requirements.
 
-### The use of fixDistance
+## The use of fixDistance
 
 It can be advantageous to define distinct uncertainty levels for the calculation of the distances to the maximum achievable level (the reference) $d_{iu}$ (Equation 3 in Husmann et al. (n.d.)) and the actual distances under a certain land-cover composition $R_{liu}$ (Equation 5 in Husmann et al. (n.d.), see also Equation 9). Too narrow uncertainty spaces of $R_{liu}$ could restrict the state space of the distances too strictly. The broader uncertainty spaces allow for higher freedom of $R_{liu}$, which allows to cover more land-cover compositions. The distances are thus allowed to be higher. This usually results in a more similar composition of the land-cover composition with similar levels of uncertainty. The transitions between the portfolios under rising uncertainty values are smoother. The disadvantage of distinct uncertainty spaces is that the distances can no longer be straightforwardly  interpreted. The distances calculated using different uncertainty spaces considered in the denominator and the counter of Equation 3 (Husmann et al., n.d.) cannot be interpreted as degree of fulfillment any more.
 
@@ -582,13 +566,11 @@ applyDf %>% gather(key = "land-cover option", value = "land-cover share", -u, -b
 
 It can be seen that the land-cover allocation transition under increasing uncertainty levels (Fig. 10) differs slightly from the multifunctional scenario shown above (Fig. 2). The here broadened state space leads to a higher share of pasture under low uncertainty levels as compared to the multifunctional portfolio above (Fig. 5).
 
-<h3><a name="7. Suggested">5. Suggested Citation </a></h3>
+# Suggested citation
 
 Husmann, K., von Groß, V., Fuchs J.M., Bödeker, K. (2022): optimLanduse: Robust Land-Use Optimization. R package version 1.1.0. <https://CRAN.R-project.org/package=optimLanduse>.
 
-<h3><a name="8. Literatur">6. Literature</a></h3>
-
-# Literature 2
+# Literature
 
 Gosling, E., Reith, E., Knoke T., Paul, C. (2020). A goal programming approach to evaluate agroforestry systems in Eastern Panama. <em>Journal of Environmental Management</em>, 261:110248. <https://doi.org/10.1016/j.jenvman.2020.110248>
 
