--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 When managing ecosystems, the question arises as to how to simultaneously combat biodiversity loss and maintain ecosystem functioning while improving human welfare. Designing multifunctional landscapes means deciding upon the composition and configuration of land-cover types, given that landscape patterns drive the landscape\`s ecological value and its ability to satisfy societal demands. Land-cover allocation models, particularly optimization approaches, have proven helpful in revealing trade-offs between multiple objectives and services provided by different land-cover compositions.
 
-The R package **optimLanduse** provides functions for easy and systematic applications of the robust multiobjective land-cover composition optimization approach of Knoke et al. (2016). It includes tools to determine the land-cover composition that best balances the multiple functions and services a landscape can provide, as well as tools for a deeper understanding and visualization of the contributions of the distinct indicators. The method has been developed and applied previously in a couple of studies, with some examples to be found in the <a href="#8. Literatur">literature</a> section. The methodological background of the approach can e.g., be found in Knoke et al. (2016) and Husmann et al. (n.d.). We here refer to the nomenclature of Husmann et al. (n.d.). The package opens the approach of Knoke et al. (2016) to the community of landscape planners and provides opportunities for systematic or batch applications. To further enhance this, we have designed a shiny dashboard for the package to get a brief idea of its functionalities and to faciliate the usage of the package, see <http://134.76.17.50/optimlanduse_shiny/>. The current package version optimizes land-cover compositions, but aspects of configuration may be added in the future.
+The R package **optimLanduse** provides functions for easy and systematic applications of the robust multiobjective land-cover composition optimization approach of Knoke et al. (2016). It includes tools to determine the land-cover composition that best balances the multiple functions and services a landscape can provide, as well as tools for a deeper understanding and visualization of the contributions of the distinct indicators. The method has been developed and applied previously in a couple of studies, with some examples to be found in the [Literature] section. The methodological background of the approach can e.g., be found in Knoke et al. (2016) and Husmann et al. (n.d.). We here refer to the nomenclature of Husmann et al. (n.d.). The package opens the approach of Knoke et al. (2016) to the community of landscape planners and provides opportunities for systematic or batch applications. To further enhance this, we have designed a shiny dashboard for the package to get a brief idea of its functionalities and to faciliate the usage of the package, see <http://134.76.17.50/optimlanduse_shiny/>. The current package version optimizes land-cover compositions, but aspects of configuration may be added in the future.
 
 # Detailed Description of the Functions’ In- and Outputs
 
@@ -108,7 +108,7 @@ dat <- read_excel(path)
 
 ```
 
-*dat* is in the required format. Refer to the help of the *initScenario()* function or to the <a href="#3. Input und Output">detailed description of the functions' in- and outputs</a> chapter for more details.
+*dat* is in the required format. Refer to the help of the *initScenario()* function or to the [Initialization and Input] chapter for more details.
 
 **Initializing an *optimLanduse* Object**
 
@@ -304,6 +304,8 @@ Alley cropping does not appear in any portfolio at any uncertainty level. It doe
 
 The sensitivity of the land-cover compositions towards indicators or groups of indicators can be analyzed by either excluding or adding indicators of interest and interpreting the differences in the results of the distinct optimization. To do so, individual and independent optimizations are carried out in- and excluding different (sets of) indicators. The set of indicators considered is representative of the stakeholders' preferences and perceptions. Comparison of optimal land-cover compositions under differing indicator combinations may help to understand how stakeholders' preferences design the land-cover compositions. The following code exemplifies optimizations for three subsets of indicators presented in Gosling et al. (2020). The shiny app of *optimLanduse* (<http://134.76.17.50/optimlanduse_shiny/>) provides straightforward functionality to define sets of indicators with a single click. Further explanation and instructions are given in the app.
 
+### Socio-economic
+
 ```{r, fig.height = 3, fig.width = 4, warning=FALSE}
 dat_socioeconomic <- dat[!dat$indicator %in% c("Protecting soil resources",
                                                "Protecting water supply"),]
@@ -333,8 +335,6 @@ result_socioeconomic$landUse %>% gather(key = landCoverOption,
 ```
 
 *Fig. 6: Composition of the optimized farm (based on data of Gosling et al. (2020)), including only socio-economic indicators. Each land-cover option is shown in an allocated share (%).*
-
-### Socio-economic
 
 The first example considers socio-economic indicators only (Fig. 6; see also Fig. 5 of Gosling et al. (2020)). The result corresponds to the above shown multifunctional portfolio (Fig. 2). This is expected, as all indicators relevant to the solution of the multifunctional portfolio (financial stability, investment costs, and meeting household needs) are also captured in the socio-economic bundle.
 
@@ -377,6 +377,8 @@ ggplot(performance_socioeconomic$scenarioTable,
 
 An analysis of the performance of the socio-economic indicators shows that the performances of the three relevant indicators equal the multifunctional portfolio (Fig. 7). The result is still defined by financial stability, investment costs and meeting household needs. Consequently, the guaranteed performance $(1-\beta)$ also equals the multifunctional portfolio. Therefore, this socio-economic portfolio also does not perfectly reflect the currently observed land-cover composition. This means that further indicators appear to be relevant for the actual farmers' decisions.
 
+### Ecological
+
 ```{r, fig.height = 3, fig.width = 4, warning=FALSE}
 dat_ecologic <- dat[dat$indicator %in% c("Protecting soil resources",
                                          "Protecting water supply"),]
@@ -405,8 +407,6 @@ result_ecologic$landUse %>% gather(key = landCoverOption, value = landCoverShare
 ```
 
 *Fig. 8: Composition of the optimized farm (based on data of Gosling et al. (2020)), including only ecological indicators. Each land-cover option is shown in an allocated share (%).*
-
-### Ecological
 
 As the second example, the ecological indicator group leads to a land-cover portfolio comprising of only forests (Fig. 8; corresponds to Fig. 5 of Gosling et al. (2020)). It can be concluded that all contributions of all other land-cover alternatives in all scenarios (even the optimistic ones) to the ecological indicators are lower than those of forests. The land-cover composition of the ecologic bundle differs fundamentally from the currently observed portfolio. The ecological indicators are therefore apparently not sufficient to approximate the farmers' current perceptions.
 
@@ -448,7 +448,7 @@ The third example is composed of a bundle of indicators that prospectively refle
 
 A pay-off matrix provides information about the influence of single indicators on the sensitivity of the results (see e.g. Aldea et al., 2014, Table 1; Ezquerro et al., 2019, Table 1; Knoke et al., 2020, Supporting Information Table S6). The matrix shows the performances of all indicators when only one indicator is considered in the land-cover optimization and therewith reveals to which degree the indicators are antagonistic. In contrast to Aldea et al. (2014), Ezquerro et al. (2019) and, Knoke et al. (2020), we here calculate the relative degree of fulfillment of the indicators and not their absolute values. The relative degree of fulfillment can easily be taken from the optimLanduse object, so that no further calculation are required to obtain a pay-off matrix.
 
-The following code calculates a pay-off matrix using the *apply* function. For this, *payOffFun* encloses all calculation steps. *payOffFun* expects the name of the indicator that is to be considered in the optimization *x* and the data in the optimLanduse format *dat*. In *payOffFun*, firstly (1), the land-cover composition is optimized considering the one indicator defined in *x* only. The resulting land-cover configuration is then (2) passed as lower and bounds to the land-cover optimization that considers all indicators. Accordingly, the solution of the second optimization (2) is limited to the result of the optimization taking into account the indicator *x* only. The second optimization aims to calculate the performances of all indicators when optimized considering the indicator *x* only. From the set of the calculated performances for each indicator, only the minimum performance is taken (3) and saved into the pay-off matrix. To sum up, each row of the pay-off matrix contains the minimum performances of all indicators when the land-cover configuration is optimized for one indicator only. The indicators considered for optimization are located on the main diagonal of the resulting pay-off matrix.
+The following code calculates a pay-off matrix using the *apply* function. For this, *payOffFun* encloses all calculation steps. *payOffFun* expects the name of the indicator that is to be considered in the optimization *x* and the data in the optimLanduse format *dat*. In *payOffFun*, firstly (1), the land-cover composition is optimized considering the one indicator defined in *x* only. The resulting land-cover configuration is then (2) passed as lower and bounds to the land-cover optimization that considers all indicators. Accordingly, the solution of the second optimization (2) is limited to the result of the optimization taking into account the indicator *x* only. The second optimization aims to calculate the performances of all indicators when optimized considering the indicator *x* only. From the set of the calculated performances for each indicator, only the minimum performance is taken (3) and saved into the pay-off matrix. To sum up, each row of the pay-off matrix contains the minimum performances of all indicators when the land-cover configuration is optimized considering indicator only. The indicators considered for optimization are located on the main diagonal of the resulting pay-off matrix.
 
 ```{r, message=FALSE, warning=FALSE, results='hide'}
 
