--- a/README.Rmd
+++ b/README.Rmd
@@ -450,7 +450,7 @@ A pay-off matrix provides information about the influence of single indicators o
 
 In contrast to the original approach, each indicator has a set of performances ($U_i$, Equations 2 and 3 in Husmann et al. (n.d.); Fig. 3 and 4 visualize the sets of indicator performances). Following the robust philosophy, we selected the worst performance out of the set of uncertainties for each indicator. The resulting worst performances of the non-optimized indicators reveal the relative extent to which these indicators are fulfilled under the worst-case uncertainty scenario. It therewith reveals to which degree the indicators are antagonistic or synergistic. The indicator performances are expressed in relation to the best-possible fulfillment of the respective indicators (Equation 3 of Husmann et al. (n.d.)). In contrast to the original approach, we thus calculate relative degrees of fulfillment for each indicator.
 
-The following code calculates a pay-off matrix using the *apply* function. For this, *payOffFun* encloses all calculation steps. *payOffFun* expects the name of the indicator that is to be considered in the optimization *x* and the data in the *optimLanduse* format *dat*. In *payOffFun*, firstly (1), the land-cover composition is optimized considering only the indicator defined in *x* The resulting land-cover composition is then (2) passed as lower and as upper bounds to the land-cover optimization that considers all indicators. Accordingly, the solution of the second optimization (2) is exactly the result of the first optimization taking into account the indicator *x* only. The second optimization only aims to prepare an *optimLanduse* object from which the performances of all indicators can be calculated. It delivers the performances of all indicators, when only the indicator *x* is considered in the optimization. From the set of the calculated performances for each indicator, only the minimum performance is selected (3) and then saved into the pay-off matrix. To sum up, each row of the pay-off matrix contains the minimum performances of all single indicators when the land-cover composition is optimized considering only one indicator. The name of this indicator considered in the optimization is written in the first column of each line. The names of all indicators are given in the table header. Consequently, the performances of the indicators considered are obligatorily best fulfilled. So that the main diagonal of the matrix contains the highest value of each indicator.
+The following code calculates a pay-off matrix using the *apply* function. For this, *payOffFun* encloses all calculation steps. *payOffFun* expects the name of the indicator that is to be considered in the optimization *x* and the data in the *optimLanduse* format *dat*. In *payOffFun*, firstly (1), the land-cover composition is optimized considering only the indicator defined in *x* The resulting land-cover composition is then (2) passed as lower and as upper bounds to the land-cover optimization that considers all indicators. Accordingly, the solution of the second optimization (2) is exactly the result of the first optimization taking into account the indicator *x* only. The second optimization only aims to prepare an *optimLanduse* object from which the performances of all indicators can be calculated. It delivers the performances of all indicators when only the indicator *x* is considered in the optimization. From each indicator's set of calculated performances, only the minimum performance is selected (3) and then saved into the pay-off matrix. To sum up, each row of the pay-off matrix contains the minimum performances of all single indicators when the land-cover composition is optimized considering only one indicator. The name of this indicator considered in the optimization is written in the first column of each line. The names of all indicators are given in the table header. Consequently, the performances of the indicators considered are obligatorily best fulfilled so that the matrix's main diagonal contains the highest value of each indicator.
 
 ```{r, message=FALSE, warning=FALSE, results='hide'}
 
