--- a/README.Rmd
+++ b/README.Rmd
@@ -300,7 +300,7 @@ applyDf %>% gather(key = "land-cover option", value = "land-cover share", -u, -b
 
 *Fig. 5: Theoretically ideal farm compositions under increasing levels of uncertainty.*
 
-Solving the portfolio (Fig. 5) under increasing assumptions for the uncertainty levels (uValue, respectively $f_u$ in Equation 4 (Husmann et al., n.d.)) provides the sensitivity of the land-cover compositions to an increasing risk aversion of the farmers. Fig. 5 corresponds to Fig. 3 in Gosling et al. (2020). The higher the uncertainty level, the higher the uncertainty spaces of the indicators. Here, the composition of land-cover alternatives is relatively stable across different uncertainty levels (Fig. 5). Comparing portfolios of uValue 0 with uValue 3, the share of forest decreases slightly from 41.2% to 34.3% and silvopasture from 45.9% to 44.9%. The share of crops decreases from 12.9% to 1%. At the same time, the shares of pasture increased from 0% to 9.6% and that of plantation from 0% to 10.2%.
+Solving the portfolio (Fig. 5) under increasing assumptions for the uncertainty levels (uValue, respectively $f_u$ in Equation 4 (Husmann et al., n.d.)) provides the sensitivity of the land-cover compositions to an increasing risk aversion of the farmers. Fig. 5 corresponds to Fig. 3 in Gosling et al. (2020). The higher the uncertainty level, the higher the uncertainty spaces of the indicators. Here, the composition of land-cover alternatives is relatively stable across different uncertainty levels (Fig. 5). An uValue of 0 leads to Portfolios without consideration of risk. Here, the results corresponds to an ordinary (non-robust) reference point approach. Comparing portfolios of uValue 0 with uValue 3, the share of forest decreases slightly from 41.2% to 34.3% and silvopasture from 45.9% to 44.9%. The share of crops decreases from 12.9% to 1%. At the same time, the shares of pasture increased from 0% to 9.6% and that of plantation from 0% to 10.2%.
 
 Alley cropping does not appear in any portfolio at any uncertainty level. It does not, on average, contribute best to any indicator. At least one other land-cover type contributes better to each indicator. It also contributes the worst (highest) to management complexity. This overall negative contribution does not change with increasing uncertainty levels. By trend, higher uncertainty levels lead to more diverse portfolios. The uncertainty spaces of all indicators increase with increasing uncertainty levels. These broadened individual uncertainty spaces then lead to a broader state space with a higher number of possible candidates for lowest-performing scenarios (i.e., scenarios that can under lower uncertainty not become part of the solution, as their distances could not be the maximum distance of any land-cover composition). Plantation, for example, is not part of the portfolio till an uncertainty level of 1.5. It only provides the best to the long-term income while providing the worst by far to the general preferences. It also generally only provides minor contributions to the indicators. Under an uncertainty level of 1, for example, plantation provides the worst to the general preferences even if all other indicators are considered as worst-possible contributions. This ranking changes after uncertainty levels above 1.5. At uncertainty level of 1.5, the worst-possible contribution of forests to the general preferences ($1 - 0.99 * 2 = -0.98$, see Table 1 in Husmann et al. (n.d.)) is then the worst possible contributing indicator among all land-cover types.
 
